--- a/src/pages/adjustment/tabs/adjustment-enter.html
+++ b/src/pages/adjustment/tabs/adjustment-enter.html
@@ -89,11 +89,11 @@
     <ion-toolbar position="bottom">
         <ion-row>
             <ion-col>
-                <button type="button" ion-button (click)="nextLocation()">Next Bin</button>
+                <button type="button" ion-button small (click)="nextLocation()">Next Bin</button>
             </ion-col>
             <ion-col text-right>
-                <button type="button" ion-button (click)="clearAdjustments()">Clear</button>
-                <button type="button" ion-button (click)="commitAdjustments()">Commit</button>
+                <button type="button" ion-button small (click)="clearAdjustments()">Clear</button>
+                <button type="button" ion-button small (click)="commitAdjustments()">Commit</button>
             </ion-col>
         </ion-row>
     </ion-toolbar>
