--- a/src/pages/adjustment/tabs/adjustment-list.html
+++ b/src/pages/adjustment/tabs/adjustment-list.html
@@ -68,8 +68,8 @@
     <ion-toolbar position="bottom">
         <ion-row>
             <ion-col text-right>
-                <button type="button" ion-button (click)="clearAdjustments()">Clear</button>
-                <button type="button" ion-button (click)="commitAdjustments()">Commit</button>
+                <button type="button" ion-button small (click)="clearAdjustments()">Clear</button>
+                <button type="button" ion-button small (click)="commitAdjustments()">Commit</button>
             </ion-col>
         </ion-row>
     </ion-toolbar>
