--- a/src/pages/setup/setup.html
+++ b/src/pages/setup/setup.html
@@ -28,7 +28,7 @@
 <ion-content padding text-center>
     <img style="width: 90px;" src="../../assets/imgs/logo.png" />
     <h2>Welcome to AcuStock</h2>
-    <p>To get started you must install the AcuShip customisation in Acumatica.
+    <p>To get started you must install the AcuStock customisation in Acumatica.
         Once completed you can configure your devices manually or using QR code.
         <!--
             To generate QR codes you can use the utility here or consult the user guide.
