--- a/src/pages/receive/shipment/tabs/shipment-enter.html
+++ b/src/pages/receive/shipment/tabs/shipment-enter.html
@@ -71,7 +71,7 @@
         </ion-row>
 
         <ion-row *ngIf="showQty">
-            <ion-col col-6>
+            <ion-col>
                 <ion-item no-padding>
                     <ion-label color="primary">Quantity:</ion-label>
                     <ion-input id="qty" #qty type="number" min="0" [(ngModel)]="enteredData.qty" (focus)="$event.target.select();"
@@ -79,7 +79,10 @@
                 </ion-item>
                 <ion-label color="primary">Quantity Remaining: {{getRemainingQty()}}</ion-label>
             </ion-col>
-            <ion-col col-12 text-right>
+        </ion-row>
+
+        <ion-row *ngIf="showQty">
+            <ion-col text-right>
                 <button type="button" align-self-end ion-button (click)="resetForm()">Cancel</button>
                 <button type="button" align-self-end ion-button (click)="addReceiptItem()">OK</button>
             </ion-col>
