So close so beta bro
- Finalised QR generator functionality.
- Added revert on failure functionality and other fixes for receipts.
- Various HTML/CSS changes.
- Updated user guide & about.
- Fixed various other stuff.

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -64,23 +64,38 @@
             <li>Does not support Lot/Serial tracked items at this stage, but it can and probably will be added in the future.</li>
         </ul>
         <h4>Inspiration</h4>
-        <p>AcuStock was born out of frustration (most of my applications are) with another un-named proprietary application which was poorly designed and full of bugs.
-            These bugs resulted in wasted time, loss of stock integrity and even when it was working the speed and user experience was far from optimal.
-            Even after much feedback the developers and vendors were indifferent to these issues. I felt they were not going to be fixed in an appropriate
-            amount of time and also found that there was no viable alternatives to this software.
-            The source code was not available and I was extremely frustrated that I was trapped supporting completely incompetent software which quite frankly should have never made it to production.</p>
-        <p>It was then I decided to write something better and provide a source code license option so nobody needs to feel trapped in incompetent proprietary hell like I have the last few months.</p>
+        <p>
+            AcuStock was born out of frustration (most of my applications are) with another un-named proprietary
+            application which was poorly designed, full of bugs and completely lacking in proper error handing.
+            The application resulted in lots of wasted time, loss of stock integrity and when it was working the speed and user experience was far from optimal.
+        </p>
+        <p>
+            After much feedback to the developers and vendors I realised that these problems were not going to be fixed
+            in an appropriate amount of time and that there was no viable alternatives to this software.
+            The source code was not available and I was extremely frustrated that I was trapped supporting completely
+            incompetent software which quite frankly should have never made it to production.
+        </p>
+        <p>
+            It was then I decided to write something better in order to create some much needed competition in this space and in turn lift the quality of the available options.
+            AcuStock is an Ionic framework (https://ionicframework.com/) application which utilises some awesome modern
+            technologies such as Cordova, Typescript, and Angular to create cross-platform applications.
+            AcuStock is only distributed on Android at the moment but can also be compiled for iOS, Windows Phone and even as a web app for use on any device with a modern browser.
+        </p>
         <h4>License</h4>
         <strong>Copyright (c) 2018 Michael B Wallace</strong>
         <div *ngIf="license == 'arr'">
             <strong>All Rights Reserved</strong>
-            <p>This version of AcuStock is under a propriety and confidential All Rights Reserved license.
+            <p>
+                This version of AcuStock is under a propriety and confidential All Rights Reserved license.
                 Unauthorized distribution of this application for commercial use, via any medium is strictly prohibited.
                 This program is distributed in the hope that it will be useful,
                 but WITHOUT ANY WARRANTY; without even the implied warranty of
-                MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.</p>
-            <p>An open-source GPL licensed version of AcuStock is available for a fee. Please contact Michael Wallace &lt;<a href="mailto:michael@wallaceit.com.au">michael@wallaceit.com.au</a>&gt;
-                if you are interested in purchasing a source code license.</p>
+                MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+            </p>
+            <p>
+                An open-source GPL licensed version of AcuStock is available for a fee. Please contact Michael Wallace &lt;<a href="mailto:michael@wallaceit.com.au">michael@wallaceit.com.au</a>&gt;
+                if you are interested in purchasing a source code license.
+            </p>
         </div>
         <div *ngIf="license == 'gpl'">
             <p>This program is free software: you can redistribute it and/or modify
