--- a/src/pages/preferences/preferences.html
+++ b/src/pages/preferences/preferences.html
@@ -19,7 +19,7 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-title>Preferences</ion-title>
+        <ion-title>Settings</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="presentPopover($event)">
                 <ion-icon name="more"></ion-icon>
