--- a/src/pages/receive/shipment/tabs/shipment-enter.html
+++ b/src/pages/receive/shipment/tabs/shipment-enter.html
@@ -83,8 +83,8 @@
 
         <ion-row *ngIf="showQty">
             <ion-col text-right>
-                <button type="button" align-self-end ion-button (click)="resetForm()">Cancel</button>
-                <button type="button" align-self-end ion-button (click)="addReceiptItem()">OK</button>
+                <button type="button" align-self-end ion-button small (click)="resetForm()">Cancel</button>
+                <button type="button" align-self-end ion-button small (click)="addReceiptItem()">OK</button>
             </ion-col>
         </ion-row>
     </ion-grid>
