--- a/src/pages/pick-shipments/pick/tabs/unpicked-list.html
+++ b/src/pages/pick-shipments/pick/tabs/unpicked-list.html
@@ -22,7 +22,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Pending Items</ion-title>
+        <ion-title>Pick List</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="presentPopover($event)">
                 <ion-icon name="more"></ion-icon>
